Display not supported msg on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="desktop-screen">
   <app-root></app-root>
+</div>
+<div class="mobile-screen">
+  <h3>Hey there<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px"></h3>
+  This site is not designed to be used on a mobile device<br/>
+  Kindly browse the site on a desktop or a laptop.
+</div>
 </body>
 </html>
